--- a/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
@@ -1,5 +1,5 @@
 ﻿@* SERVICES TITLE *@
-<section class="container-fluid services">
+<section class="container-fluid services" id="servicesMain">
     <div class="row">
         <div class="col-xs-12">
             @foreach (Services SV in Model.Services)
