--- a/MyYouthFutures/Views/Links/Index.cshtml
+++ b/MyYouthFutures/Views/Links/Index.cshtml
@@ -51,6 +51,6 @@
     </div>
 
     <hr />
-    <a asp-controller="Home" asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
+    <a asp-controller="Home" asp-action="Index" asp-fragment="linksMain" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
 
 </div>
