Modified files to make content in line with each other

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -18,6 +18,7 @@
 @Html.Partial("PartialViews/_History")
 @Html.Partial("PartialViews/_FirstYearService")
 @Html.Partial("PartialViews/_StreetOutreach")
+@Html.Partial("PartialViews/_YouthStories")
 @Html.Partial("PartialViews/_BoardOfDirectors")
 @Html.Partial("PartialViews/_Staff")
 @Html.Partial("PartialViews/_Media")
