--- a/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
@@ -21,7 +21,7 @@
 @* END SERVICES TITLE *@
 @* Panels for Services Offered *@
 
-<section>
+<section class="servicesMessage">
     <div class="container text-center row" >
         <add-component controller="Services_Message" is-visible="User.Identity.IsAuthenticated">Add New Service</add-component>
     </div>
