--- a/MyYouthFutures/Views/Shared/PartialViews/_FoundersMessage.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_FoundersMessage.cshtml
@@ -1,6 +1,6 @@
 ﻿@* ------ Founders Message ------ *@
 
-<div class="container">
+<div class="container" id="founderImages">
     <div class="row history_text_pics">
         @foreach (Founder_Message fm in Model.Founder_Messages)
         {
