Footer images are showing

--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -134,15 +134,15 @@
                         <p class="mont-light-dark-14-email">Youth Futures<br /> 2760 S. Adams Ave<br /> Ogden, UT 84403</p>
                     </section>
                     <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
-                        <img src="./resources/page_1.png" alt="Home Image" class="footer-home" />
+                        <img src="~/images/logo_white.svg" alt="Home Image" class="footer-home" />
                     </section>
                     <section class="col-xs-10 col-xs-offset-1
                             col-sm-6 col-md-4 col-sm-offset-0 footer-section">
                         <div class="social-media">
-                            <a href="#"><img src="~/images/social_instagram.png" alt="Instagram" /></a>
-                            <a href="#"><img src="~/images/social_twitter.png" alt="Twitter" /></a>
-                            <a href="#"><img src="~/images/social_tumblr.png" alt="Tumbler" /></a>
-                            <a href="#"><img src="~/images/social_fb.png" alt="Facebook" /></a>
+                            <a href="#"><img src="~/images/instagram.png" alt="Instagram" /></a>
+                            <a href="#"><img src="~/images/twitter.svg" alt="Twitter" /></a>
+                            <a href="#"><img src="~/images/tumbler.svg" alt="Tumbler" /></a>
+                            <a href="#"><img src="~/images/facebook.svg" alt="Facebook" /></a>
                         </div>
                     </section>
                 </div>
