Fixed the media model pages

--- a/MyYouthFutures/Views/Media/Details.cshtml
+++ b/MyYouthFutures/Views/Media/Details.cshtml
@@ -12,10 +12,22 @@
         <hr />
         <dl class="dl-horizontal sidepage-content">
             <dt>
-                @Html.DisplayNameFor(model => model.Text_Type)
+                @Html.DisplayNameFor(model => model.Title)
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.Text_Type)
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Image)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Image)
+            <dt>
+                @Html.DisplayNameFor(model => model.SubTitle)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.SubTitle)
+            </dd>
             </dd>
             <dt>
                 @Html.DisplayNameFor(model => model.Content_Text)
