--- a/MyYouthFutures/Views/Media/Edit.cshtml
+++ b/MyYouthFutures/Views/Media/Edit.cshtml
@@ -29,12 +29,12 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="SubTitle" class="control-label"></label>
-                    <input asp-for="SubTitle" class="form-control" />
+                    <textarea asp-for="SubTitle" class="form-control"></textarea>
                     <span asp-validation-for="SubTitle" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Content_Text" class="control-label"></label>
-                    <input asp-for="Content_Text" class="form-control" />
+                    <textarea asp-for="Content_Text" class="form-control"></textarea>
                     <span asp-validation-for="Content_Text" class="text-danger"></span>
                 </div>
                 <div class="form-group">
