--- a/MyYouthFutures/Views/Media/Delete.cshtml
+++ b/MyYouthFutures/Views/Media/Delete.cshtml
@@ -12,17 +12,34 @@
     <div class="sidepage-content">    
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.Text_Type)
+                @Html.DisplayNameFor(model => model.Title)
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.Text_Type)
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Time)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Time)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Image)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Image)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.SubTitle)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.SubTitle)
             </dd>
             <dt>
                 @Html.DisplayNameFor(model => model.Content_Text)
             </dt>
             <dd>
                 @Html.DisplayFor(model => model.Content_Text)
-
             </dd>
         </dl>
 
